# crypto-cap

mpo2hceauth/: settings.gradle
mpo2hceauth/app/: build.gradle
mpo2hceauth/app/src/androidTest/java/com/example/mpo2hceauth/: ExampleInstrumentedTest.kt
mpo2hceauth/app/src/main/: AndroidManifest.xml
mpo2hceauth/app/src/main/java/com/example/mpo2hceauth/: APDU.java  HCEService.kt  MainActivity.kt  User.java  UserWBB.java  Util.java  rCodeAPDU.java
mpo2hceauth/app/src/main/java/com/example/mpo2hceauth/Crypto/: AESecb.java  AESgcm.java  ECCOP_Elliptic_curves.java
mpo2hceauth/app/src/main/java/com/example/mpo2hceauth/utils/: APDU.java  Convert.java
mpo2hceauth/app/src/main/res/values/: strings.xml
mpo2hceauth/app/src/main/res/xml/: apduservice.xml
mpo2hceauth/app/src/test/java/com/example/mpo2hceauth/: ExampleUnitTest.kt
mpo2hceauth/gradle/wrapper/: gradle-wrapper.properties
privacy-scheme/: CMakeLists.txt  README.md  main.c
privacy-scheme-multos/: Makefile  README.md  main.c
privacy-scheme-multos/config/: config.h
privacy-scheme-multos/include/: apdu.h  types.h
privacy-scheme-multos/include/models/: issuer.h  user.h
privacy-scheme-multos/lib/ecc/: multosecc.h
privacy-scheme-multos/lib/helpers/: mem_helper.h  random_helper.h
privacy-scheme/config/: config.h
privacy-scheme/include/: apdu.h  system.h  types.h
privacy-scheme/include/models/: issuer.h  user.h  verifier.h
privacy-scheme/lib/apdu/: command.h
privacy-scheme/lib/helpers/: epoch_helper.c  epoch_helper.h  hash_helper.c  hash_helper.h  hex_helper.c  hex_helper.h  mcl_helper.c  mcl_helper.h  smartcard_helper.c  smartcard_helper.h
privacy-scheme/lib/pcsc/: reader.h
privacy-scheme/scripts/: benchmarking.sh
privacy-scheme/src/: setup.c  setup.h
privacy-scheme/src/controllers/: issuer.c  issuer.h  user.c  user.h  verifier.c  verifier.h
privacy-scheme/src/controllers/android/: user.c
privacy-scheme/src/controllers/multos/: user.c  user.h
security-scheme/: CMakeLists.txt  README.md  main.c
security-scheme-javacard/: README.md  build.xml  common.properties.example
security-scheme-javacard/src/security_scheme/: Config.java  Main.java  UserController.java  UserModel.java  VerifierController.java  VerifierModel.java
security-scheme/config/: config.h
security-scheme/include/: apdu.h  system.h
security-scheme/include/models/: issuer.h  user.h  verifier.h
security-scheme/lib/apdu/: command.c
security-scheme/lib/helpers/: aes_helper.c  aes_helper.h
security-scheme/lib/pcsc/: reader.c
security-scheme/scripts/: benchmarking.sh
security-scheme/src/controllers/: issuer.c  issuer.h  user.c  user.h  verifier.c  verifier.h
security-scheme/src/controllers/android/: user.c  user.h
security-scheme/src/controllers/javacard/: user.c
